tests/errors/sem.unknown-label.call-args.or
main :: () -> void {
    foo :: (a: int) -> void {
        return;
    };


    foo(b:10);
};
